[package]
name = "temp-download-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
futures = "0.3.29"
headers = "0.3.9"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
warp = { version = "0.3.6", features = ["tls"] }
yansi = "0.5.1"
